--- a/Supervised_vs_Unsupervised/SV_vs_UVP.ipynb
+++ b/Supervised_vs_Unsupervised/SV_vs_UVP.ipynb
@@ -41,6 +41,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
+    "import os\n",
     "\n",
     "from sklearn import datasets\n",
     "from sklearn import manifold\n",
