--- a/Supervised_vs_Unsupervised/SV_vs_UVP.ipynb
+++ b/Supervised_vs_Unsupervised/SV_vs_UVP.ipynb
@@ -42,6 +42,7 @@
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import os\n",
+    "import math\n",
     "\n",
     "from sklearn import datasets\n",
     "from sklearn import manifold\n",
