--- a/Cross_Validation/Train_vs_Test_Accuracy.ipynb
+++ b/Cross_Validation/Train_vs_Test_Accuracy.ipynb
@@ -36,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df =pd.read_csv(\"../Datasets/winequality-red.csv\")\n",
+    "df =pd.read_csv(\"../../Datasets/AAAMLP_datasets/winequality-red.csv\")\n",
     "\n",
     "# mapping dict that maps the quality values from 0 to 5\n",
     "\n",
