Multi Label Classification

--- a/Cross_Validation/K_Fold.ipynb
+++ b/Cross_Validation/K_Fold.ipynb
@@ -51,7 +51,7 @@
     "    ## Initiate k_fold\n",
     "    kf = model_selection.KFold(n_splits=5)\n",
     "\n",
-    "    for fold,(trn_,val_) in enumerate(kf.split(X=df)):\n",
+    "    for fold,(trn_,val_) in enumerate(kf.split(X=df)): ## Enumerate function keeps track of index/iteration and value, here as we have used just 3 var to track i.e. fold it keeps track of index/iteration , trn_ keeps track of Train index values, val_keeps track of val index values\n",
     "        df.loc[val_,'kfold'] = fold\n",
     "\n",
     "    # fill the new kfold col\n",
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "(0, (array([1, 2, 3]), array([0])))\n(1, (array([0, 2, 3]), array([1])))\n(2, (array([0, 1, 3]), array([2])))\n(3, (array([0, 1, 2]), array([3])))\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in enumerate(kf.split(X)):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "0\n1\n2\n3\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i,(j,k) in enumerate(kf.split(X)):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
