--- a/Handling_Categorical_Variables/Categorical_var.ipynb
+++ b/Handling_Categorical_Variables/Categorical_var.ipynb
@@ -310,6 +310,70 @@
     "# •create one-hot encoding. Yes, you can skip binarization!\n",
     "# •go for modelling! I mean the machine learning one.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pandas\n",
+    "from sklearn import preprocessing\n",
+    "\n",
+    "data_path =  r'C:\\GN\\Projects\\Datasets\\AAAMLP_datasets/'\n",
+    "output_path = r'C:\\GN\\Projects\\Datasets\\AAAMLP_outputs/'\n",
+    "\n",
+    "train = pd.read_csv(data_path+\"cat_train.csv\")\n",
+    "test = pd.read_csv(data_path+\"cat_test.csv\")\n",
+    "\n",
+    "# create a fake target column for test data since this column doesn't exist\n",
+    "test[\"target\"] = -1\n",
+    "\n",
+    "# concatenate both training and test data\n",
+    "data = pd.concat([train, test]).reset_index(drop=True)\n",
+    "\n",
+    "# make a list of features we are interested in\n",
+    "# # id and target is something we should not encode\n",
+    "features = [x for x in train.columns if x not in[\"id\", \"target\"]]\n",
+    "\n",
+    "## Loop over features\n",
+    "\n",
+    "for feat in features:\n",
+    "    # create new instance for each feature\n",
+    "    lbl_enc = preprocessing.LabelEncoder()\n",
+    "\n",
+    "    # note the trick here\n",
+    "    # since its categorical data, we fillna with a string and convert all the data to string type. So no matter its int or float, its converted to string int/float but categorical\n",
+    "\n",
+    "    temp_col = data[feat].fillna(\"NONE\").astype(str).values\n",
+    "\n",
+    "    # We can use fit_transform here as we do not have extra test data that we need to transform on separately\n",
+    "    data.loc[:,feat] = lbl_enc.fit_transform(temp_col)\n",
+    "\n",
+    "# split the training and test data again    \n",
+    "train = data[data.target != -1].reset_index(drop=True)\n",
+    "test = data[data.target == -1].reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([False, False, False, ..., False, False, False])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 11
+    }
+   ],
+   "source": [
+    "data[\"ord_4\"].value_counts()[data[\"ord_4\"]].values < 2000"
+   ]
   }
  ]
 }
